Fix bug where left/right aligned labels and content were not displaying correctly
git-svn-id: https://plugins.svn.wordpress.org/visual-form-builder/trunk@674595 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -105,6 +105,12 @@ label.vfb-desc{
 		padding-top:2px;
 		text-align:right;
 	}
+	
+	.visual-form-builder.left-label li div,
+	.visual-form-builder.right-label li div {
+		float: left;
+		width: 65%;
+	}
 
 label.vfb-desc{
 	font-weight:bold;
